add: Se completa el CRUD de Customer