@@ -6,13 +6,12 @@ import co.com.quind.model.customer.Customer;
 import lombok.experimental.UtilityClass;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
+@UtilityClass
 public class CustomerMapper {
 
     public static List<CustomerResponseDto> customerListToCustomerResponseDtoList(List<Customer> customerList){
 
-        return customerList.stream().map(CustomerMapper::customerToCustomerResponseDto).collect(Collectors.toList());
+        return customerList.stream().map(CustomerMapper::customerToCustomerResponseDto).toList();
     }
 
     public static CustomerResponseDto customerToCustomerResponseDto(Customer customer){
@@ -38,4 +37,5 @@ public class CustomerMapper {
                 .birthdate(customerRequestDto.getBirthdate())
                 .build();
     }
+
 }
